# blog-project

./: .gitignore  Cargo.toml  Dockerfile.frontend  Dockerfile.server  Dockerfile.test  Makefile  README.md  docker-compose.yml
blog-cli/: Cargo.toml
blog-cli/src/: main.rs
blog-client/: Cargo.toml  README.md  build.rs
blog-client/proto/: blog.proto
blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  types.rs
blog-client/tests/: integration.rs
blog-server/: Cargo.toml  build.rs
blog-server/migrations/: 01_create_posts.sql  01_create_users.sql  02_create_posts.sql  02_create_users.sql  03_seed_test_data.sql
blog-server/proto/: blog.proto
blog-server/src/: main.rs
blog-server/src/application/: auth_service.rs  blog_service.rs
blog-server/src/data/: post_repository.rs  user_repository.rs
blog-server/src/domain/: errors.rs  mod.rs  post.rs  user.rs
blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  logging.rs
blog-server/src/presentation/: auth.rs  dto.rs  middleware.rs  mod.rs
blog-server/src/presentation/grpc/: grpc_server.rs
blog-server/src/presentation/handlers/: handlers.rs
blog-wasm/: Cargo.toml  README.md  index.html
blog-wasm/src/: api.rs  app.rs  lib.rs  main.rs
