[workspace]
members = ["blog-cli","blog-client","blog-server", "blog-wasm"]
resolver = "3"

[workspace.dependencies]
tonic = "0.11"
tonic-build = "0.11"
thiserror="2.0"
argon2 = "0.5"
uuid = {version = "1.21", features=["v4", "serde"]}
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
prost = "0.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"