[workspace]
members = ["blog-cli","blog-client","blog-server", "blog-wasm"]
resolver = "3"

[workspace.dependencies]
tonic = "0.11"
tonic-build = "0.11"
thiserror = "2.0"
argon2 = "0.5"
uuid = { version = "1.21", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
prost = "0.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
rand_core = "0.10"
actix-cors = "0.6"
actix-service = "2"
futures-util = "0.3"
dotenv = "0.15"
clap = { version = "4", features = ["derive"] }
strum = "0.28"
strum_macros = "0.28"
paste = "1"
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "wayland",
    "x11",
] }
log = "0.4"
pollster = "0.4"
env_logger = "0.11"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
