[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
strum = "0.28.0"
strum_macros = "0.28.0"

[build-dependencies]
tonic-build.workspace = true
