[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
thiserror.workspace = true
argon2.workspace = true
uuid = {workspace = true, features = ["v4"]}
chrono.workspace = true
serde = {workspace = true, features=["derive"]}
jsonwebtoken = "10.3.0"
rand_core = "0.10.0"
tracing-subscriber = {version="0.3.22", features = ["env-filter", "json", "chrono", "time"]}
tracing = "0.1.44"
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
actix-web.workspace = true
tokio = "1.50.0"

[build-dependencies]
tonic-build.workspace = true
