[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
thiserror.workspace = true
argon2.workspace = true
uuid = { workspace = true, features = ["v4"] }
chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
jsonwebtoken.workspace = true
rand_core.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
sqlx.workspace = true
actix-web.workspace = true
serde_json.workspace = true
tokio.workspace = true
actix-cors.workspace = true
actix-service.workspace = true
futures-util.workspace = true
anyhow.workspace = true
dotenv.workspace = true
async-trait.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
