[package]
name = "blog-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
# You only need serde if you want app persistence:
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
pollster.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger.workspace = true

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
web-sys.workspace = true
